Day-9_IngressManifest/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-webapp-deploy
  labels:
    name: nginx-webapp-deploy
    app: maaz-custom-page
spec:
  replicas: 2
  selector:
    matchLabels:
      name: nginx-for-ingress-pod
      app: maaz-custom-page
  template:
    metadata:
      labels:
        name: nginx-for-ingress-pod
        app: maaz-custom-page
    spec:
      containers:
      - name: nginx-for-ingress
        image: maazpatel24/nginx-k8s-ingress:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 50m
          requests:
            cpu: 20m
