Day-9_IngressManifest/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-webapp-service
  labels:
    name: nginx-webapp-service
    app: maaz-custom-page
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    name: nginx-for-ingress-pod
    app: maaz-custom-page
